--- a/html-css-1/style.css
+++ b/html-css-1/style.css
@@ -1,35 +1,56 @@
 body {
-    height: 100%;
-    width: 100%
+    height: 100vh;
 }
 
 
 header {
     background-color: grey;
-    height: 20%;
+    height: 10%;
     width: 100%;
 }
 h1 {
     position: relative;
-    top: 10px;
-    left: 10px;
+    top: 15px;
+    left: 35px;
+    font-size: 35px;
+    color: white
 
 
 }
 
 .navButtons {
-    position: relative;
-    display: flex;
-    justify-content: center;
+    top: 15px;
+    right: 50%;
+    color: white;
+    display: inline-flex;
+
 
 
 }
 
+#LowerBox {
+    height: 30vh;
+    background: black;
+    color: yellow;
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+}
+
+#centerPage {
+    height: 45vh;
+}
 
 
-#footer {
-    color: indigo;
-    bottom: 100px;
-    height: 100%;
-    width: 100%
+
+
+
+
+
+
+
+footer {
+    background-color: darkslateblue;
+    height: 15vh;
+
 }
